--- a/mmpython/debian/control
+++ b/mmpython/debian/control
@@ -1,13 +1,13 @@
-Source: python2.2-mmpython
+Source: python2.3-mmpython
 Section: devel
 Priority: optional
 Maintainer: Aubin Paul <debian@outlyer.org>
-Build-Depends: debhelper (>= 3.0.0), python2.2-dev (>= 2.2), libdvdread3-dev
+Build-Depends: debhelper (>= 3.0.0), python2.3-dev, libdvdread3-dev
 Standards-Version: 3.5.2
 
-Package: python2.2-mmpython
+Package: python2.3-mmpython
 Architecture: any
-Depends: python2.2, ${shlibs:Depends}
+Depends: python2.3, ${shlibs:Depends}
 Description: Media Metadata Library for Python
  MMPython is a Media Meta Data retrieval framework. It retrieves
  metadata from mp3, ogg, avi, jpg, tiff and other file formats. Among
