o Use dh_python (Temporarily included because debhelper doesn't grok 2.3) o Updated Changelog since 0.1 was released last week o Change source package to 'mmpython' and binary to 'python2.3-mmpython' o Debhelper generates postinst/prerm so don't use ours.
git-svn-id: svn://svn.freevo.org/kaa/trunk@220 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/mmpython/debian/control
+++ b/mmpython/debian/control
@@ -1,4 +1,4 @@
-Source: python2.3-mmpython
+Source: mmpython
 Section: devel
 Priority: optional
 Maintainer: Aubin Paul <debian@outlyer.org>
@@ -7,7 +7,7 @@ Standards-Version: 3.5.2
 
 Package: python2.3-mmpython
 Architecture: any
-Depends: python2.3, ${shlibs:Depends}
+Depends: python2.3, ${python:Depends}
 Description: Media Metadata Library for Python
  MMPython is a Media Meta Data retrieval framework. It retrieves
  metadata from mp3, ogg, avi, jpg, tiff and other file formats. Among
