--- a/mmpython/debian/control
+++ b/mmpython/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.5.2
 
 Package: python2.3-mmpython
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}
+Depends: ${python:Depends}, ${shlibs:Depends}, lsdvd
 Description: Media Metadata Library for Python
  MMPython is a Media Meta Data retrieval framework. It retrieves
  metadata from mp3, ogg, avi, jpg, tiff and other file formats. Among
