--- a/canvas/MANIFEST.in
+++ b/canvas/MANIFEST.in
@@ -1,4 +1,6 @@
 recursive-include src *.py
+recursive-include src *.c
+recursive-include src *.h
 recursive-include test *.py
 recursive-include test *.png
 recursive-include test *.mng
