add/move metadata
git-svn-id: svn://svn.freevo.org/kaa/trunk@1163 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/MANIFEST.in
+++ b/metadata/MANIFEST.in
@@ -1,6 +1,7 @@
-include src/audio/eyeD3/*.py src/image/*.py src/video/*.py 
-include src/disc/*.py src/disc/*.c src/misc/*.py
-recursive-include src/audio/ *.py
-include setup.py MANIFEST.in bin/mminfo
-include doc/* 
-recursive-include i18n  *
+recursive-include src *.py
+recursive-include src *.c
+recursive-include src *.h
+recursive-include i18n *
+
+include bin/mminfo
+include MANIFEST README COPYING TODO AUTHORS
