--- a/base/MANIFEST.in
+++ b/base/MANIFEST.in
@@ -1,4 +1,4 @@
 recursive-include src *.py *.c *.h
 recursive-include test *.py
 
-include MANIFEST README COPYING TODO AUTHORS
+include ChangeLog MANIFEST README COPYING TODO AUTHORS
