change Tack's mail address
git-svn-id: svn://svn.freevo.org/kaa/trunk@2591 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/ChangeLog.in
+++ b/base/ChangeLog.in
@@ -1,6 +1,6 @@
 user dischi Dirk Meyer (dischi@freevo.org)
 user dmeyer Dirk Meyer (dischi@freevo.org)
-user tack Jason Tackaberry (tack@sault.org)
+user tack Jason Tackaberry (tack@urandom.ca)
 user rshortt Rob Shortt <rob@tvcentric.com>
 user vifredr Viggo Fredriksen (vifredr@users.sf.net)
 user duncan Duncan Webb <duncan@freevo.org>
