Improve MANIFEST and ChangeLog file support and set svn ignore properties to ignore generated files.
git-svn-id: svn://svn.freevo.org/kaa/trunk@2597 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/ChangeLog.in
+++ b/metadata/ChangeLog.in
@@ -1,4 +1,4 @@
-user dischi Dirk Meyer (dischi@freevo.org)
-user dmeyer Dirk Meyer (dischi@freevo.org)
-user tack Jason Tackaberry (tack@urandom.ca)
+user dischi Dirk Meyer <dischi@freevo.org>
+user dmeyer Dirk Meyer <dischi@freevo.org>
+user tack Jason Tackaberry <tack@urandom.ca>
 user duncan Duncan Webb <duncan@freevo.org>
