--- a/mevas/MANIFEST.in
+++ b/mevas/MANIFEST.in
@@ -1,5 +1,3 @@
 recursive-include src *.py
-recursive-include src *.c
-recursive-include src *.h
 
-include MANIFEST README COPYING TODO AUTHORS
+include ChangeLog MANIFEST README COPYING TODO AUTHORS
