--- a/popcorn/ChangeLog.in
+++ b/popcorn/ChangeLog.in
@@ -1,3 +1,5 @@
 user dischi Dirk Meyer <dischi@freevo.org>
 user dmeyer Dirk Meyer <dischi@freevo.org>
 user tack Jason Tackaberry <tack@urandom.ca>
+aka player
+aka mplayer
