--- a/beacon/ChangeLog.in
+++ b/beacon/ChangeLog.in
@@ -2,5 +2,4 @@ user dischi Dirk Meyer <dischi@freevo.org>
 user dmeyer Dirk Meyer <dischi@freevo.org>
 user tack Jason Tackaberry <tack@urandom.ca>
 user rshortt Rob Shortt <rob@tvcentric.com>
-user vifredr Viggo Fredriksen <vifredr@users.sf.net>
-user duncan Duncan Webb <duncan@freevo.org>
+aka vfs
