--- a/canvas/MANIFEST.in
+++ b/canvas/MANIFEST.in
@@ -6,4 +6,4 @@ recursive-include test *.png
 recursive-include test *.mng
 recursive-include test *.jpg
 
-include MANIFEST README COPYING TODO AUTHORS
+include ChangeLog MANIFEST README COPYING TODO AUTHORS
