--- a/cherrypy/MANIFEST.in
+++ b/cherrypy/MANIFEST.in
@@ -4,4 +4,4 @@ recursive-include test *.kid
 recursive-include test *.html
 recursive-include test *.tmpl
 
-include MANIFEST README COPYING TODO AUTHORS
+include ChangeLog MANIFEST README COPYING TODO AUTHORS
