--- a/display/MANIFEST.in
+++ b/display/MANIFEST.in
@@ -3,4 +3,4 @@ recursive-include src *.c
 recursive-include src *.h
 recursive-include test *.py
 
-include MANIFEST README COPYING TODO AUTHORS
+include ChangeLog MANIFEST README COPYING TODO AUTHORS
