--- a/epg/MANIFEST.in
+++ b/epg/MANIFEST.in
@@ -1,5 +1,4 @@
 recursive-include src *.py
-recursive-include src *.c *.cc
-recursive-include src *.h
+recursive-include test *.py
 
 include ChangeLog MANIFEST README COPYING TODO AUTHORS
