--- a/popcorn/MANIFEST.in
+++ b/popcorn/MANIFEST.in
@@ -1,5 +1,5 @@
 recursive-include src *.py
-recursive-include src *.c *.cc
-recursive-include src *.h
+recursive-include test *.py
 
+include bin/popcorn
 include ChangeLog MANIFEST README COPYING TODO AUTHORS
