--- a/metadata/ChangeLog.in
+++ b/metadata/ChangeLog.in
@@ -2,3 +2,4 @@ user dischi Dirk Meyer <dischi@freevo.org>
 user dmeyer Dirk Meyer <dischi@freevo.org>
 user tack Jason Tackaberry <tack@urandom.ca>
 user duncan Duncan Webb <duncan@freevo.org>
+user hmeine Hans Meine <hans_meine@gmx.net>
