add Hans Meine to svn users
git-svn-id: svn://svn.freevo.org/kaa/trunk@3649 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/ChangeLog.in
+++ b/base/ChangeLog.in
@@ -4,3 +4,4 @@ user tack Jason Tackaberry <tack@urandom.ca>
 user rshortt Rob Shortt <rob@tvcentric.com>
 user vifredr Viggo Fredriksen <vifredr@users.sf.net>
 user duncan Duncan Webb <duncan@freevo.org>
+user hmeine Hans Meine <hans_meine@gmx.net>
