--- a/metadata/MANIFEST.in
+++ b/metadata/MANIFEST.in
@@ -1,6 +1,6 @@
 recursive-include src *.py
 recursive-include src *.c
-recursive-include src *.h
+recursive-include doc *
 
 include bin/mminfo
 include ChangeLog MANIFEST README COPYING TODO AUTHORS NEWS
