Remove renamed API_CHANGES.txt; add generated html docs to manifest so they get included in the release.
git-svn-id: svn://svn.freevo.org/kaa/trunk@4092 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/MANIFEST.in
+++ b/base/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-include src *.py *.c *.h
 recursive-include test *.py
+recursive-include doc/html *
 
-include ChangeLog MANIFEST README COPYING TODO AUTHORS NEWS
+include ChangeLog MANIFEST README COPYING TODO AUTHORS NEWS API_CHANGES
